# MaubotTrumpTweet

./: .gitignore  LICENSE  Makefile  README  README.md  maubot.yaml  plugin.py  pylintrc  pyproject.toml  requirements.txt  test-requirements.txt  top-level-requirements.txt  trumptweet.py
faketweet/: faketweet.py
scripts/: build_maubot_yaml.py
